参考文献补充

--- a/R19A.bib
+++ b/R19A.bib
@@ -111,6 +111,26 @@
   year={2010}
 }
 
+@article{padgett2008b,
+  title={Bridge damage and repair costs from Hurricane Katrina},
+  author={Padgett, Jamie and DesRoches, Reginald and Nielson, Bryant and Yashinsky, Mark and Kwon, Oh-Sung and Burdette, Nick and Tavera, Ed},
+  journal={Journal of Bridge Engineering},
+  volume={13},
+  number={1},
+  pages={6--14},
+  year={2008},
+  publisher={American Society of Civil Engineers}
+}
+
+@article{ralls1993n,
+  title={The new Texas U-beam bridges: an aesthetic and economical design solution},
+  author={Ralls, Mary Lou and Ybanez, Luis and Panak, John J},
+  journal={PRECAST/PRESTRESSED CONCRETE INSTITUTE. JOURNAL},
+  volume={38},
+  number={5},
+  year={1993}
+}
+
 @article{ozol1994a,
   title={Alkali-carbonate rock reaction},
   author={Ozol, Michael A},
@@ -171,13 +191,64 @@
   year    = {2012},
 }
 
-@standard{aashto2010l,
+@standard{aashto2011g,
   author  = {{AASHTO}},
-  title   = {LRFD Bridge Design Specifications},
-  Edition = {3},
+  title   = {Guide Specifications for LRFD Seismic Bridge Design},
+  Edition = {2},
   Organization= {American Association of State Highway and Transportation Officials},
   address = {Wahington, D.C.},
-  year    = {2010},
+  year    = {2011},
+}
+
+@standard{aashto2010ld,
+  author       = {{AASHTO}},
+  title        = {LRFD Bridge Design Specifications},
+  Edition      = {5},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {2010},
+}
+
+@standard{aashto2010lc,
+  author       = {{AASHTO}},
+  title        = {LRFD Bridge Construction Specifications},
+  Edition      = {3},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {2010},
+}
+
+@standard{aashto2008g,
+  author       = {{AASHTO}},
+  title        = {Guide Specifications for Bridges Vulnerable to Coastal Storms},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {2008},
+}
+
+@standard{aashto2007l,
+  author       = {{AASHTO}},
+  title        = {LRFD Bridge Design Specifications},
+  Edition      = {4},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {2007},
+}
+
+@standard{aashto1994g,
+  author       = {{AASHTO}},
+  title        = {Guide for Painting Steel Structures},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {1994},
+}
+
+@standard{aashto1983s,
+  author       = {{AASHTO}},
+  title        = {Standard Specifications for Seismic Design of Highway Bridges},
+  Organization = {American Association of State Highway and Transportation Officials},
+  address      = {Wahington, D.C.},
+  year         = {1983},
 }
 
 @techreport{mojab1993i,
@@ -365,6 +436,17 @@
   number={11},
   pages={3305--3319},
   year={1994},
+  publisher={American Society of Civil Engineers}
+}
+
+@article{azizinamini1989s,
+  title={Static and cyclic performance of semirigid steel beam-to-column connections},
+  author={Azizinamini, Atorod and Radziminski, James B},
+  journal={Journal of Structural engineering},
+  volume={115},
+  number={12},
+  pages={2979--2999},
+  year={1989},
   publisher={American Society of Civil Engineers}
 }
 
