--- a/appendix/D.tex
+++ b/appendix/D.tex
@@ -147,7 +147,7 @@ In spite of all the uncertainties regarding magnitudes and combinations of restr
 \end{figure}
 
 \bigskip 
-Because of the uncertainty associated with calculations of positive continuity moments resulting from the variability of the creep and shrinkage effects, temperature gradient, differential coefficient of expansion effects, locked-in heat of hydration effects, settlement, and cracking, calculations to determine restraint moments are complex and probably unreliable. Therefore, in order to eliminate the need to attempt to calculate restraint moments and to simplify the design, the following recommendations for positive moment connections were developed based on the work in the NCHRP projects (Oesterle et at. 1989; Mirmiran et al. 2001; Miller et al. 2004), the FHWA jointless bridge project (Oesterle et al. 2004a, 2004b) and on the Fourth Edition of the LRFD Specifications (AASHTO 2007):
+Because of the uncertainty associated with calculations of positive continuity moments resulting from the variability of the creep and shrinkage effects, temperature gradient, differential coefficient of expansion effects, locked-in heat of hydration effects, settlement, and cracking, calculations to determine restraint moments are complex and probably unreliable. Therefore, in order to eliminate the need to attempt to calculate restraint moments and to simplify the design, the following recommendations for positive moment connections were developed based on the work in the NCHRP projects (Oesterle et at. 1989; Mirmiran et al. 2001; Miller et al. 2004), the FHWA jointless bridge project (Oesterle et al. 2004a, 2004b) and on the Fourth Edition of the LRFD Specifications \cite{aashto2007l}:
 
 \emph{Option 1.} Positive moment connection reinforcement at the piers should not be provided. This approach prevents the development of significant positive restraint moments in the pier diaphragms (and eliminates constructability issues with the overlapping reinforcement). The girders should be analyzed as simply supported for dead plus live loads at service levels. This is allowed by LRFD Specifications Article 5.14.1.4.1; eliminates the requirement to calculate restraint moments (without the need to age girders prior to construction); and, as stated in the commentary of the LRFD Specifications, has been used successfully by several state DOTs.
 
