--- a/contents/chp01.tex
+++ b/contents/chp01.tex
@@ -866,7 +866,7 @@
 \end{table}
 
 % As indicated in \cref{tab:parameter-each-alternative}, alternatives 1, 2, 3, and 4 use the same concrete mix, hereafter referred to as regular mix, which was used for the base option designed in accordance with LRFD Specifications (option designated as AASHTO Design in \cref{tab:alternative-aashto-guide}). Alternative 1 uses 5\% silica fume to make the concrete impermeable. Alternative 2 uses stainless steel. Alternative 3 uses increased concrete cover to delay the adverse effects of corrosion. Alternative 4 uses a membrane and overlay.
-如 \cref{tab:parameter-each-alternative} 所示，备选方案 1、2、3 和 4 使用相同的混凝土配合比，以下称为常规配合比，用于根据 LRFD 规范设计的基础选项 （在 \cref{tab:alternative-aashto-guide} 中指定为 AASHTO 设计的选项）。 备选方案 1 使用 5\% 硅粉使混凝土不透水。 备选方案 2 使用不锈钢。 备选方案 3 使用增加的混凝土保护层来延迟腐蚀的不利影响。 备选方案 4 使用薄膜和覆盖层。
+如 \cref{tab:parameter-each-alternative} 所示，备选方案 1、2、3 和 4 使用相同的混凝土配合比，以下称为常规配合比，用于根据 \lrfd 设计的基础选项 （在 \cref{tab:alternative-aashto-guide} 中指定为 \gls*{aashto} 设计的选项）。 备选方案 1 使用 5\% 硅粉使混凝土不透水。 备选方案 2 使用不锈钢。 备选方案 3 使用增加的混凝土保护层来延迟腐蚀的不利影响。 备选方案 4 使用薄膜和覆盖层。
 
 % Following is a brief description of the results for each alternative.
 以下是对每个备选方案的结果的简要说明。
@@ -875,7 +875,7 @@
 % \paragraph*{Deck Design Based on LRFD Specifications}
 \paragraph*{基于 \lrfd 的桥面板设计}
 % As shown in \cref{tab:parameter-each-alternative}, in the case of the AASHTO base design, corrosion starts after 6.6 years (shown as Initiation). Thereafter, the propagation of corrosion to the point of needed repair is 6 years. At the end of 12.6 years, the repair and maintenance actions are assumed to start and continue every 10 years, during which 20\% of the surface area is repaired. These assumptions are used for the sake of demonstration and will vary based on various DOT preferences and practices. \cref{fig:total-life-cost} shows the total life cycle cost based on present value.
-如 \cref{tab:parameter-each-alternative} 所示，在 \gls{aashto} 基础设计的情况下，腐蚀在 6.6 年后开始（显示为初始）。 此后，腐蚀传播到需要修复的点为 6 年。 在 12.6 年末，假设维修和保养行动每 10 年开始并持续一次，期间维修 20\% 的表面积。 这些假设用于演示目的，并且会根据各种 DOT 偏好和实践而有所不同。 \cref{fig:total-life-cost} 显示基于现值的总生命周期成本。
+如 \cref{tab:parameter-each-alternative} 所示，在 \gls*{aashto} 基础设计的情况下，腐蚀在 6.6 年后开始（显示为初始）。 此后，腐蚀传播到需要修复的点为 6 年。 在 12.6 年末，假设维修和保养行动每 10 年开始并持续一次，期间维修 20\% 的表面积。 这些假设用于演示目的，并且会根据各种 DOT 偏好和实践而有所不同。 \cref{fig:total-life-cost} 显示基于现值的总生命周期成本。
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
