--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -1354,7 +1354,7 @@ The importance of considering these events has been exemplified by numerous brid
   \item  Multiple catastrophic vessel and bridge accidents around the world from the 1960s to the mid-1980s (Knott and Larsen 1990), including the 1964 and 1974 collapses of the Pontchartrain Bridge in Louisiana and the 1980 collapse of the Sunshine Skyway Bridge in Florida
   \item Impact forces from motor vehicles, similar to vessel collision, and subsequent fires that have resulted in structural damage to substructure units. Susceptibility to damage from these aberrant vehicle impacts
   underscores the importance of pier protection.
-  \item The 1971 San Fernando Earthquake, and subsequent major earthquakes identified in \cref{subpar:seismic}, which caused catastrophic damage to numerous bridges and stimulated research relating to bridge performance during seismic events (AASHTO 1983).
+  \item The 1971 San Fernando Earthquake, and subsequent major earthquakes identified in \cref{subpar:seismic}, which caused catastrophic damage to numerous bridges and stimulated research relating to bridge performance during seismic events \cite{aashto1983s}.
 \end{itemize}
 
 \subsubsection{Substructure Deterioration due to Material Deterioration, Corrosion, and Section Loss}
@@ -1646,7 +1646,7 @@ bearings.
 
 \subsubsection*{Hydraulic Action}
 \paragraph*{Flood/Storm Surge}
-Following hurricanes Ivan (2004) and Rita (2005), which damaged numerous bridges along the Gulf coast, the FHWA along with 10 states sponsored a study that culminated in the development of the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms (AASHTO 2008). This guide specification recommends that where practical, a vertical clearance of at least 1-ft above the 100-year design wave crest elevation, which includes the design storm water elevation, should be provided. The study further recommends additional freeboard due to the large uncertainty in the basic wave and surge data needed to determine the wave crest elevation. If this vertical clearance is not possible, the bridge should be analyzed and designed to resist storm wave forces, and other wave force mitigation measures should be implemented, such as venting to reduce buoyancy forces.
+Following hurricanes Ivan (2004) and Rita (2005), which damaged numerous bridges along the Gulf coast, the FHWA along with 10 states sponsored a study that culminated in the development of the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms \cite{aashto2008g}. This guide specification recommends that where practical, a vertical clearance of at least 1-ft above the 100-year design wave crest elevation, which includes the design storm water elevation, should be provided. The study further recommends additional freeboard due to the large uncertainty in the basic wave and surge data needed to determine the wave crest elevation. If this vertical clearance is not possible, the bridge should be analyzed and designed to resist storm wave forces, and other wave force mitigation measures should be implemented, such as venting to reduce buoyancy forces.
 
 % Florida DOT issued a Temporary Design Bulletin C09-08 (FDOT 2009), which required the implementation of the AASHTO Guide Specifications for Bridges Vulnerable to Coastal Storms discussed above.
 佛罗里达\acrlong*{dot}发布了临时设计公告 C09-08（FDOT 2009），要求实施上述 AASHTO 易受沿海风暴影响的桥梁指南规范。
