--- a/contents/chp03.tex
+++ b/contents/chp03.tex
@@ -500,8 +500,7 @@ structure (Corven and Moreton 2004). Complete filling of the duct is essential f
 constituent of grout is ordinary portland cement (Type I or II). Supplementary cementitious materials (SCMs) are
 added to lower the permeability. Prepackaged materials are preferred since more uniform product can be obtained.
 Total chlorides in grouts should be less than the specified limit of 0.08\% by weight of cementitious material as
-specified by AASHTO LRFD Bridge Construction Specifications (Construction Specifications) (Table 10.9.3-2)
-(AASHTO 2010). Chlorides are limited to ensure that the protective layer over the strand is not compromised. The
+specified by AASHTO LRFD Bridge Construction Specifications (Construction Specifications) (Table 10.9.3-2) \cite{aashto2010lc}. Chlorides are limited to ensure that the protective layer over the strand is not compromised. The
 bleeding and resulting voids in grouts have been a concern. Usually the voids are interconnected and facilitate the intrusion of harmful solutions. Similarly, shrinkage should be controlled by using non-shrink grouts, so that cracks
 that can facilitate the intrusion of chlorides are eliminated or minimized. The grout properties are given in
 Construction Specifications Table 10.9.3-2, along with the maximum total chloride ions.
