--- a/contents/chp06.tex
+++ b/contents/chp06.tex
@@ -1503,9 +1503,8 @@ A, Subsection A2, Painting Scenarios, Subsection A.2.1 entitled Bridge Painting 
 percent of the surface at which the cost of the repairs approached that of full removal. The percentage identified as
 the critical percentage beyond which the surfaces are rusted or distressed such that surface preparation is necessary is
 16+\% (per ASTM D610, Rust Grade 2. Note Rust Grade 10 = essentially no rust, while Rust Grade 0 = >50\% rust)
-SSPC reports in this document that according to the AASHTO Guide for Painting Steel Structures, (AASHTO
-1994) “whenever the surface preparation area exceeds 15\% to 20\% of the surface area, the economics are such that a
-total removal of lead paint is the most viable option.”
+SSPC reports in this document that according to the AASHTO Guide for Painting Steel Structures, \cite{aashto1994g} ``whenever the surface preparation area exceeds 15\% to 20\% of the surface area, the economics are such that a
+total removal of lead paint is the most viable option.''
 
 As noted above, from a cost perspective, the difference in cost between spot or zone cleaning and painting versus
 full removal is dramatic. According to industry sources, a typical lead paint removal project in the northeastern part
