--- a/contents/chp08.tex
+++ b/contents/chp08.tex
@@ -305,8 +305,7 @@ discovered corrosion immediately below abutment footings of what would be consid
 Piling deterioration is of increased importance for integral abutments due to the additional strains placed on the
 substructure from the longitudinal expansion of the superstructure. The potential for section loss based on soil
 conditions should be accounted for as presented by Article 10.7.5 of the AASHTO LRFD Bridge Design Specifications
-(LRFD Specifications) which states minimum considerations for the effects of corrosion and deterioration of piling
-(AASHTO 2012). Adhering to these guidelines should provide sufficient protection against advanced corrosion and
+(LRFD Specifications) which states minimum considerations for the effects of corrosion and deterioration of piling \cite{aashto2012l}. Adhering to these guidelines should provide sufficient protection against advanced corrosion and
 thus failure of the integral abutment system.
 
 \subsubsection{Jointless Bridge Abutments with MSE Walls}
@@ -949,7 +948,7 @@ Scour around the foundation is an important issue that should be considered in t
   wash away the bed material.
 \end{itemize}
 
-Scour is usually evaluated for a design flood with a return period of 100 years with a check flood not to exceed the 500-year event, or from an overtopping flood of lesser recurrence (AASHTO 2012).
+Scour is usually evaluated for a design flood with a return period of 100 years with a check flood not to exceed the 500-year event, or from an overtopping flood of lesser recurrence \cite{aashto2012l}.
 
 Also, to increase the safety against pile failure due to scour, a few longer piles should be used rather than many short piles.
 
