--- a/contents/chp10.tex
+++ b/contents/chp10.tex
@@ -255,7 +255,7 @@
 \paragraph{可替换性不足}
 
 % Regardless of expected service life, bearings are subjected to severe service conditions, and have a high potential for unintended consequences related to improper design, manufacturing, installation, and maintenance that can lead to shorter service lives than other bridge elements. Consideration should be given in the overall bridge system design to allow for easy replacement of bearings with minimal traffic disruption. AASHTO and NSBA provide recommended bearing details that facilitate replacement \cite{aashtonsba2004s}.
-无论预期{使用寿命}如何，支座都会承受严酷的使用条件，并且很可能因设计、制造、安装和维护不当而导致意外后果，从而导致{使用寿命}比其他桥梁{元件}短。 在整个桥梁系统设计中应考虑到允许在最小交通中断的情况下轻松更换支座。 AASHTO 和 NSBA 提供了便于更换的推荐支座详细信息 \cite{aashtonsba2004s}。
+无论预期\gls*{servicelife}如何，支座都会承受严酷的使用条件，并且很可能因设计、制造、安装和维护不当而导致意外后果，从而导致\gls*{servicelife}比其他桥梁\gls*{element}短。 在整个桥梁系统设计中应考虑到允许在最小交通中断的情况下轻松更换支座。 AASHTO 和 NSBA 提供了便于更换的推荐支座详细信息 \cite{aashtonsba2004s}。
 
 % \subsubsection{Deficiency of Bearing Related Items}
 \subsubsection{支座相关项的不足}
@@ -360,7 +360,7 @@ factors include:
 \end{itemize}
 
 \subparagraph{Fabrication/Manufacturing}
-Material or fabrication flaws can lead to performance failure and reduced service life. Proper quality assurance (QA) and quality control (QC) procedures in accordance with current AASHTO LRFD Construction Specifications must be implemented in the fabrication or manufacturing of bridge bearings to ensure that the completed bearings meet specifications and provide required levels of performance (AASHTO 2010). See \cref{subpar:fabrication-related} for additional discussion.
+Material or fabrication flaws can lead to performance failure and reduced service life. Proper quality assurance (QA) and quality control (QC) procedures in accordance with current AASHTO LRFD Construction Specifications must be implemented in the fabrication or manufacturing of bridge bearings to ensure that the completed bearings meet specifications and provide required levels of performance \cite{aashto2010lc}. See \cref{subpar:fabrication-related} for additional discussion.
 
 \subparagraph{Construction}
 Production/operation defects at the construction stage can be due to either element damage or improper placement. Protective care must be taken during field construction to prevent damage or contamination to sensitive bearing parts such as sliding surfaces or elastomeric pads or discs. Bearings must be set in the field at proper positions to accommodate installation temperatures and rotations.
