--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -319,4 +319,20 @@
   description={Epoxy-Coated Reinforcement, 环氧涂层钢筋}
 ]{ecr}{ECR}{环氧涂层钢筋}
 
+\newacronym[%
+  description={Constant-Amplitude Fatigue Limit, 等幅疲劳极限}
+]{cafl}{CAFL}{等幅疲劳极限}
+
+\newacronym[%
+  description={Constant-Amplitude Fatigue Threshold, 等幅疲劳阈值}
+]{caft}{CAFT}{等幅疲劳阈值}
+
+\newacronym[%
+  description={Linear Elastic Fracture Mechanics, 线弹性断裂力学}
+]{lefm}{LEFM}{线弹性断裂力学}
+
+\newacronym[%
+  description={Plastic Fracture Mechanics, 塑性断裂力学}
+]{pfm}{PFM}{塑性断裂力学}
+
 %%% ----------------------------------------------------------------------------
